<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="app_name">Magic Fluids Free</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Magic Fluids</string>
    <string name="menu_save_image">Save image</string>
    <string name="menu_clear_screen">Clear screen</string>
    <string name="menu_set_lwp">Set as Live Wallpaper</string>
    <string name="menu_change_button">Hide menu buttons</string>
    <string name="menu_buy">Buy full version</string>
    <string name="menu_more">More apps</string>
    <string name="menu_problems">Help and support</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="demo_options">Majority of options are disabled in demo version</string>
    <string name="apache">Magic Fluids uses Android Color Picker library by yukuku (many thanks!) that is licensed under Apache License, Version 2.0. Click here to read the license</string>
    <string name="full">If you like it, consider rating it and buying full version. Your support will let us improve it and create even better applications in future!</string>
    <string name="email">For any comments, questions, suggestions or bug reports, please contact me at magicfluids@madscientist.pl</string>
    <string name="problems_email">Please contact me at magicfluids@madscientist.pl</string>
</resources>
